--- a/SHS-014-V/Src/All Initiatives.fx.yaml
+++ b/SHS-014-V/Src/All Initiatives.fx.yaml
@@ -659,6 +659,7 @@
         LayoutDirection: =LayoutDirection.Vertical
         LayoutGap: =10
         LayoutMode: =LayoutMode.Auto
+        Visible: =DisplayInitiative
         Width: =App.Width-'compForChampionAction(C)'.VarMenuWidth
         X: ='compForChampionAction(C)'.VarMenuWidth
         Y: ='compForChampionAction(C)'.ComHeaderHeight
