--- a/SHS-014-V/Src/All Initiatives.fx.yaml
+++ b/SHS-014-V/Src/All Initiatives.fx.yaml
@@ -667,7 +667,8 @@
 
         Label33 As label:
             AlignInContainer: =AlignInContainer.Start
-            Text: ="Text"
+            Text: =Gallery_study_6.Selected.Study&"-"&Gallery_study_6.Selected.'Initiative Name'
+            Width: =Parent.Width
             ZIndex: =1
 
         Form3_5 As form:
