--- a/SHS-014-V/Src/All Initiatives.fx.yaml
+++ b/SHS-014-V/Src/All Initiatives.fx.yaml
@@ -1299,3 +1299,32 @@
             Y: =630
             ZIndex: =3
 
+    notfound_study_2 As groupContainer.verticalAutoLayoutContainer:
+        Fill: =RGBA(255, 255, 255, 1)
+        Height: =537
+        LayoutAlignItems: =LayoutAlignItems.Center
+        LayoutDirection: =LayoutDirection.Vertical
+        LayoutJustifyContent: =LayoutJustifyContent.Center
+        LayoutMode: =LayoutMode.Auto
+        Visible: =If(Gallery_study.AllItemsCount=0,true,false)
+        Width: =App.Width-compAllInitiatives.VarMenuWidth
+        X: =compAllInitiatives.VarMenuWidth
+        Y: =231
+        ZIndex: =7
+
+        Image8_19 As image:
+            Height: =200
+            Image: ='Not found'
+            Width: =200
+            ZIndex: =1
+
+        Label19_19 As label:
+            Align: =Align.Center
+            AlignInContainer: =AlignInContainer.Stretch
+            Color: =RGBA(255, 0, 0, 1)
+            FontWeight: =FontWeight.Bold
+            Height: =80
+            Size: =17
+            Text: ="No Matching Items Found"
+            ZIndex: =2
+
