--- a/SHS-014-V/Src/For Admin Action.fx.yaml
+++ b/SHS-014-V/Src/For Admin Action.fx.yaml
@@ -1929,74 +1929,83 @@
             Y: =630
             ZIndex: =3
 
-    "'Send for Approval_popup_1' As groupContainer.manualLayoutContainer":
-        Fill: =RGBA(174, 208, 221, 1)
-        Height: =537
+    Container53 As groupContainer.manualLayoutContainer:
+        Fill: =RGBA(40, 134, 222, 0.15)
+        Height: =App.Height-compForAdminAction.ComHeaderHeight
         Visible: =Sendforapprovaladmin
-        Width: =1033
-        X: =303
-        Y: =196
+        Width: =App.Width-compForAdminAction.VarMenuWidth
+        X: =compForAdminAction.VarMenuWidth
+        Y: =compForAdminAction.ComHeaderHeight
         ZIndex: =7
 
-        Label37_1 As label:
-            Align: =Align.Center
-            Color: =RGBA(0, 81, 100, 1)
-            FontWeight: =FontWeight.Bold
-            Height: =106
-            Size: =20
-            Text: ="Confirm Submission"
-            Width: =1059
-            X: =4
-            Y: =18
+        "'Send for Approval_popup_1' As groupContainer.manualLayoutContainer":
+            Fill: =RGBA(255, 255, 255, 1)
+            Height: =537
+            Visible: =Sendforapprovaladmin
+            Width: =1073
+            X: =195
+            Y: =40
             ZIndex: =1
 
-        Label38_1 As label:
-            Height: =80
-            Size: =20
-            Text: ="Are you sure you want send '"&Gallery_study_3.Selected.Study&"' for Approval?"
-            Width: =779
-            X: =24
-            Y: =124
-            ZIndex: =2
+            Label37_1 As label:
+                Align: =Align.Center
+                Color: =RGBA(0, 81, 100, 1)
+                FontWeight: =FontWeight.Bold
+                Height: =106
+                Size: =20
+                Text: ="Confirm Submission"
+                Width: =1027
+                X: =4
+                Y: =18
+                ZIndex: =1
 
-        Button5_2 As button:
-            Height: =57
-            OnSelect: |-
-                =
-                Clear(ValueofIdS);
-                ForAll(
-                    Filter(Gallery_study_4.AllItems,Checkbox2_3.Value=true),
-                    Collect(ValueofIdS,ThisRecord.ID)
-                );
-                ApprovalFlowforAdminAction.Run(JSON(ValueofIdS),"Approval1",Gallery_study_7.Selected.ID);
-                UpdateContext({Sendforapprovaladmin:false}); Notify("The study is send for approval successfully",NotificationType.Success)
-            Text: ="Confirm"
-            Width: =210
-            X: =781
-            Y: =462
-            ZIndex: =4
+            Label38_1 As label:
+                Height: =80
+                Size: =20
+                Text: ="Are you sure you want send '"&Gallery_study_3.Selected.Study&"' for Approval?"
+                Width: =779
+                X: =24
+                Y: =124
+                ZIndex: =2
 
-        Button5_3 As button:
-            Fill: =RGBA(255, 191, 0, 1)
-            Height: =57
-            OnSelect: |-
-                =UpdateContext({Sendforapprovaladmin:false})
-            Text: ="Cancel"
-            Width: =210
-            X: =541
-            Y: =462
-            ZIndex: =5
+            Button5_2 As button:
+                Height: =57
+                OnSelect: |-
+                    =
+                    Clear(ValueofIdS);
+                    ForAll(
+                        Filter(Gallery_study_4.AllItems,Checkbox2_3.Value=true),
+                        Collect(ValueofIdS,ThisRecord.ID)
+                    );
+                    ApprovalFlowforAdminAction.Run(JSON(ValueofIdS),"Approval1",Gallery_study_7.Selected.ID);
+                    UpdateContext({Sendforapprovaladmin:false}); Notify("The study is send for approval successfully",NotificationType.Success)
+                Text: ="Confirm"
+                Width: =210
+                X: =781
+                Y: =462
+                ZIndex: =4
 
-        TextInput3_1 As text:
-            Default: =""
-            Height: =173
-            HintText: ="Add Comments (Optional)"
-            HoverFill: =RGBA(255, 255, 255, 1)
-            Size: =18
-            Width: =1005
-            X: =24
-            Y: =215
-            ZIndex: =6
+            Button5_3 As button:
+                Fill: =RGBA(255, 191, 0, 1)
+                Height: =57
+                OnSelect: |-
+                    =UpdateContext({Sendforapprovaladmin:false})
+                Text: ="Cancel"
+                Width: =210
+                X: =541
+                Y: =462
+                ZIndex: =5
+
+            TextInput3_1 As text:
+                Default: =""
+                Height: =173
+                HintText: ="Add Comments (Optional)"
+                HoverFill: =RGBA(255, 255, 255, 1)
+                Size: =18
+                Width: =987
+                X: =24
+                Y: =215
+                ZIndex: =6
 
     RejectPopup_1 As groupContainer.manualLayoutContainer:
         Fill: =RGBA(152, 208, 70, 1)
@@ -2005,7 +2014,7 @@
         Width: =1063
         X: =303
         Y: =211
-        ZIndex: =8
+        ZIndex: =9
 
         Label37_3 As label:
             FontWeight: =FontWeight.Bold
