--- a/SHS-014-V/Src/For Admin Action.fx.yaml
+++ b/SHS-014-V/Src/For Admin Action.fx.yaml
@@ -1942,9 +1942,9 @@
             TextInput1 As text:
                 Default: ="Text input"
                 Height: =118
-                Width: =572
-                X: =147
-                Y: =92
+                Width: =Parent.Width-50
+                X: =20
+                Y: =96
                 ZIndex: =2
 
             Button6 As button:
