--- a/SHS-014-V/Src/For Approval%28Approver1%29.fx.yaml
+++ b/SHS-014-V/Src/For Approval%28Approver1%29.fx.yaml
@@ -754,12 +754,7 @@
                             Fill: =RGBA(255, 0, 0, 1)
                             HoverFill: =Self.Fill
                             OnSelect: |-
-                                =Clear(ValueofIdS);
-                                ForAll(
-                                    Filter(Gallery_study_5.AllItems,Checkbox2_7.Value=true),
-                                    Collect(ValueofIdS,ThisRecord.ID)
-                                );
-                                //ApprovalFlowforAdminAction.Run(JSON(ValueofIdS),"Rejected",)
+                                =UpdateContext({rejectpopup:true})
                             PressedColor: =Color.White
                             PressedFill: =Self.Fill
                             RadiusBottomLeft: =0
@@ -1968,7 +1963,7 @@
 
             Button6_2 As button:
                 OnSelect: |-
-                    =UpdateContext({Sendforapprovaladmin:false})
+                    =UpdateContext({Sendforapproval:false})
                 Text: ="Cancel"
                 Width: =142
                 X: =435
@@ -1976,15 +1971,29 @@
                 ZIndex: =3
 
             Button6_3 As button:
-                OnSelect: |-
-                    =
-                    Clear(ValueofId);
+                OnSelect: |
+                    =Clear(ValueofId);
                     ForAll(
-                        Filter(Gallery_study_4.AllItems,Checkbox2_3.Value=true),
-                        Collect(ValueofId,ThisRecord.ID)
+                        Filter(
+                            Gallery_study_4.AllItems,
+                            Checkbox2_3.Value = true
+                        ),
+                        Collect(
+                            ValueofId,
+                            ThisRecord.ID
+                        )
                     );
-                    ApprovalFlowforAdminAction.Run(JSON(ValueofId),"Approval1",Gallery_study_3.Selected.DivisionWithStudyId,TextInput1_8.Text);
-                    UpdateContext({Sendforapprovaladmin:false}); Notify("The study is send for Approval Process successfully",NotificationType.Success)
+                    ResponceFlow.Run(
+                        "Approver1",
+                        "Approved",
+                        TextInput1_8.Text,
+                        JSON(ValueofId)
+                    );
+                    UpdateContext({Sendforapproval: false});
+                    Notify(
+                        "The study is send for Approval Process successfully",
+                        NotificationType.Success
+                    );
                 Text: ="Confirm"
                 Width: =142
                 X: =624
@@ -2029,7 +2038,7 @@
                     Filter(Gallery_study_4.AllItems,Checkbox2_3.Value=true),
                     Collect(ValueofId,ThisRecord.ID)
                 );
-                ApprovalFlowforAdminAction.Run(JSON(ValueofId),"Rejected",Gallery_study_3.Selected.ID,TextInput3_4.Text);
+                ResponceFlow.Run(JSON(ValueofId),"Rejected",Gallery_study_3.Selected.ID,TextInput3_4.Text);
                 UpdateContext({Sendforapprovaladmin:false}); Notify("The Initiative is Rejected successfully",NotificationType.Success)
             Text: ="Confirm"
             Width: =210
