--- a/SHS-014-V/Src/For Approval%28Approver2%29.fx.yaml
+++ b/SHS-014-V/Src/For Approval%28Approver2%29.fx.yaml
@@ -4,43 +4,20 @@
         Height: =768
         ZIndex: =7
 
-    Container14_10 As groupContainer.verticalAutoLayoutContainer:
-        Fill: =RGBA(255, 255, 255, 1)
-        Height: =645
-        LayoutAlignItems: =LayoutAlignItems.Center
+    "'ForApprovel1-main_1' As groupContainer.verticalAutoLayoutContainer":
+        Height: =App.Height-'compForApproval(A1)'.ComHeaderHeight
         LayoutDirection: =LayoutDirection.Vertical
-        LayoutJustifyContent: =LayoutJustifyContent.Center
         LayoutMode: =LayoutMode.Auto
-        Visible: =If(Gallery_study_9.AllItemsCount=0,true,false)
         Width: =App.Width-'compForApproval(A2)'.VarMenuWidth
         X: ='compForApproval(A2)'.VarMenuWidth
-        Y: =123
+        Y: ='compForApproval(A1)'.ComHeaderHeight
         ZIndex: =8
 
-        Image8_15 As image:
-            Height: =200
-            Image: ='Not found'
-            Width: =200
+        Arrow2_13 As arrow.backArrow:
+            Height: =30
+            OnSelect: =Navigate(Administration)
+            Width: =30
             ZIndex: =1
-
-        Label19_15 As label:
-            Align: =Align.Center
-            AlignInContainer: =AlignInContainer.Stretch
-            Color: =RGBA(255, 0, 0, 1)
-            FontWeight: =FontWeight.Bold
-            Height: =80
-            Size: =17
-            Text: ="No Matching Items Found"
-            ZIndex: =2
-
-    "'Main-For Champion Action(C)_2' As groupContainer.verticalAutoLayoutContainer":
-        Height: =App.Height-'compForApproval(A2)'.ComHeaderHeight
-        LayoutDirection: =LayoutDirection.Vertical
-        LayoutMode: =LayoutMode.Auto
-        Width: =App.Width-'compForApproval(A2)'.VarMenuWidth
-        X: ='compForApproval(A2)'.VarMenuWidth
-        Y: ='compForApproval(A2)'.ComHeaderHeight
-        ZIndex: =9
 
         "'Button&heading_15' As groupContainer.verticalAutoLayoutContainer":
             AlignInContainer: =AlignInContainer.SetByContainer
@@ -87,7 +64,7 @@
                     LayoutMinWidth: =255
                     ZIndex: =1
 
-                    search_approver2 As text:
+                    TextInput1_9 As text:
                         BorderColor: =RGBA(0, 0, 0, 1)
                         BorderThickness: =1
                         Default: =""
@@ -95,7 +72,7 @@
                         HintText: ="Search"
                         HoverBorderColor: =RGBA(0, 0, 0, 1)
                         HoverFill: =RGBA(255, 255, 255, 1)
-                        OnChange: =Set(search_name,search_approver2.Text)
+                        OnChange: =Set(search_name,TextInput1_9.Text)
                         RadiusBottomLeft: =0
                         RadiusBottomRight: =0
                         RadiusTopLeft: =0
@@ -108,8 +85,8 @@
                     Icon28_37 As icon.Search:
                         Height: =40
                         Icon: =Icon.Search
-                        OnSelect: =Set(search_name,search_approver2.Text)
-                        Visible: =If(IsBlank(search_approver2.Text),true,false)
+                        OnSelect: =Set(search_name,TextInput1_9.Text)
+                        Visible: =If(IsBlank(TextInput1_9.Text),true,false)
                         Width: =34
                         X: =298
                         Y: =20
@@ -118,8 +95,8 @@
                     Icon28_38 As icon.Cancel:
                         Height: =35
                         Icon: =Icon.Cancel
-                        OnSelect: =Set(search_name,"");Reset(search_approver2)
-                        Visible: =If(IsBlank(search_approver2.Text),false,true)
+                        OnSelect: =Set(search_name,"");Reset(TextInput1_9)
+                        Visible: =If(IsBlank(TextInput1_9.Text),false,true)
                         Width: =35
                         X: =298
                         Y: =20
@@ -210,6 +187,7 @@
                             ZIndex: =2
 
         Container14_16 As groupContainer.verticalAutoLayoutContainer:
+            AlignInContainer: =AlignInContainer.SetByContainer
             Fill: =RGBA(255, 255, 255, 1)
             Height: =537
             LayoutAlignItems: =LayoutAlignItems.Center
@@ -225,6 +203,7 @@
             ZIndex: =4
 
         Header_question_15 As groupContainer.horizontalAutoLayoutContainer:
+            AlignInContainer: =AlignInContainer.SetByContainer
             BorderThickness: =1
             FillPortions: =0
             Height: =80
@@ -376,7 +355,18 @@
 
             Gallery_study_9 As gallery.galleryVertical:
                 DelayItemLoading: =true
-                Items: =Filter('Divisions With Study',Title="approver2",StartsWith('Study Name',search_approver2.Text)||StartsWith('Division Name',search_approver2.Text))
+                Items: |-
+                    =Filter(
+                        'Divisions With Study',
+                        Title = "approver2",
+                        StartsWith(
+                            'Study Name',
+                            search_study.Text
+                        ) || StartsWith(
+                            'Division Name',
+                            search_study.Text
+                        )
+                    )
                 Layout: =Layout.Vertical
                 LayoutMinHeight: =287
                 LayoutMinWidth: =320
@@ -497,14 +487,42 @@
                                 =UpdateContext({ShowActionpage:true})
                             ZIndex: =1
 
+    NotFound_1 As groupContainer.verticalAutoLayoutContainer:
+        Fill: =RGBA(255, 255, 255, 1)
+        Height: =537
+        LayoutAlignItems: =LayoutAlignItems.Center
+        LayoutDirection: =LayoutDirection.Vertical
+        LayoutJustifyContent: =LayoutJustifyContent.Center
+        LayoutMode: =LayoutMode.Auto
+        Visible: =If(Gallery_study_9.AllItemsCount=0,true,false)
+        Width: =App.Width-'compForApproval(A2)'.VarMenuWidth
+        X: ='compForApproval(A2)'.VarMenuWidth
+        Y: =231
+        ZIndex: =9
+
+        Image8_15 As image:
+            Height: =200
+            Image: ='Not found'
+            Width: =200
+            ZIndex: =1
+
+        Label19_15 As label:
+            Align: =Align.Center
+            Color: =RGBA(255, 0, 0, 1)
+            FontWeight: =FontWeight.Bold
+            Height: =80
+            Size: =17
+            Text: ="No Matching Items Found"
+            ZIndex: =2
+
     Actionpage_3 As groupContainer.verticalAutoLayoutContainer:
         Fill: =Color.White
         Height: =App.Height-'compForApproval(A1)'.ComHeaderHeight
         LayoutDirection: =LayoutDirection.Vertical
         LayoutMode: =LayoutMode.Auto
         Visible: =ShowActionpage
-        Width: =App.Width-'compForApproval(A1)'.VarMenuWidth
-        X: ='compForApproval(A1)'.VarMenuWidth
+        Width: =App.Width-'compForApproval(A2)'.VarMenuWidth
+        X: ='compForApproval(A2)'.VarMenuWidth
         Y: ='compForApproval(A1)'.ComHeaderHeight
         ZIndex: =10
 
@@ -674,7 +692,7 @@
                 Label28_5 As label:
                     FontWeight: =FontWeight.Bold
                     PaddingLeft: =20
-                    Text: =Gallery_study_2.Selected.'Study Name'
+                    Text: =Gallery_study_9.Selected.'Study Name'
                     Width: =Parent.Width
                     ZIndex: =1
 
@@ -708,13 +726,7 @@
                             Fill: =RGBA(5, 89, 8, 1)
                             HoverFill: =Self.Fill
                             OnSelect: |-
-                                =Clear(ValueofIdS);
-                                ForAll(
-                                    Filter(Gallery_study_10.AllItems,Checkbox2_9.Value=true),
-                                    Collect(ValueofIdS,ThisRecord.ID)
-                                );
-                                
-                                //ApprovalFlowforAdminAction.Run(JSON(ValueofIdS),"Approval1")
+                                =UpdateContext({Sendforapproval:true})
                             PressedColor: =Color.White
                             PressedFill: =Self.Fill
                             RadiusBottomLeft: =0
@@ -744,12 +756,7 @@
                             Fill: =RGBA(255, 0, 0, 1)
                             HoverFill: =Self.Fill
                             OnSelect: |-
-                                =Clear(ValueofIdS);
-                                ForAll(
-                                    Filter(Gallery_study_10.AllItems,Checkbox2_9.Value=true),
-                                    Collect(ValueofIdS,ThisRecord.ID)
-                                );
-                                //ApprovalFlowforAdminAction.Run(JSON(ValueofIdS),"Rejected",)
+                                =UpdateContext({rejectpopup:true})
                             PressedColor: =Color.White
                             PressedFill: =Self.Fill
                             RadiusBottomLeft: =0
@@ -984,7 +991,7 @@
 
             Gallery_study_10 As gallery.galleryVertical:
                 DelayItemLoading: =true
-                Items: =Filter('Initiative List',Progress="Admin Review")
+                Items: =Filter('Initiative List',Progress="Approval2")
                 Layout: =Layout.Vertical
                 LayoutMinHeight: =287
                 LayoutMinWidth: =320
@@ -1174,6 +1181,16 @@
                         LayoutMode: =LayoutMode.Auto
                         Width: =Parent.Width
                         ZIndex: =9
+
+                        Icon16_23 As icon.DocumentwithContent:
+                            AlignInContainer: =AlignInContainer.Center
+                            FillPortions: =1
+                            Height: =30
+                            Icon: =Icon.DocumentWithContent
+                            LayoutMinWidth: =20
+                            OnSelect: |
+                                =UpdateContext({DisplayInitiative:true});
+                            ZIndex: =3
 
     DisplayInitiative_3 As groupContainer.verticalAutoLayoutContainer:
         Fill: =RGBA(255, 255, 0, 1)
@@ -1910,4 +1927,159 @@
             X: =546
             Y: =630
             ZIndex: =3
+
+    ApprovePopup_1 As groupContainer.manualLayoutContainer:
+        Fill: =RGBA(40, 134, 222, 0.15)
+        Height: =App.Height-compForAdminAction.ComHeaderHeight
+        Visible: =Sendforapproval
+        Width: =App.Width-compForAdminAction.VarMenuWidth
+        X: =compForAdminAction.VarMenuWidth
+        Y: =compForAdminAction.ComHeaderHeight
+        ZIndex: =12
+
+        "'Send for Approval_popup_3' As groupContainer.manualLayoutContainer":
+            Fill: =RGBA(255, 255, 255, 1)
+            Height: =389
+            Visible: =Sendforapproval
+            Width: =Parent.Width-500
+            X: =222
+            Y: =99
+            ZIndex: =1
+
+            Label33_2 As label:
+                Align: =Align.Center
+                FontWeight: =FontWeight.Semibold
+                Height: =54
+                Text: ="Are Sure you sure you want"""&Gallery_study_4.Selected.Study &""" to Send For Approval?"
+                Width: =Parent.Width
+                Y: =24
+                ZIndex: =1
+
+            TextInput1_10 As text:
+                Default: ="Text input"
+                Height: =118
+                Width: =Parent.Width-50
+                X: =20
+                Y: =96
+                ZIndex: =2
+
+            Button6_4 As button:
+                OnSelect: |-
+                    =UpdateContext({Sendforapproval:false})
+                Text: ="Cancel"
+                Width: =142
+                X: =435
+                Y: =300
+                ZIndex: =3
+
+            Button6_5 As button:
+                OnSelect: |
+                    =Clear(ValueofId);
+                    ForAll(
+                        Filter(
+                            Gallery_study_10.AllItems,
+                            Checkbox2_9.Value = true
+                        ),
+                        Collect(
+                            ValueofId,
+                            ThisRecord.ID
+                        )
+                    );
+                    ResponceFlow.Run(
+                        "approver2",
+                        "Approved",
+                        TextInput1_10.Text,
+                        JSON(ValueofId)
+                    );
+                    UpdateContext({Sendforapproval: false});
+                    Notify(
+                        "The study is send for Approval Process successfully",
+                        NotificationType.Success
+                    );
+                Text: ="Confirm"
+                Width: =142
+                X: =624
+                Y: =300
+                ZIndex: =4
+
+    RejectPopup_3 As groupContainer.manualLayoutContainer:
+        Fill: =RGBA(152, 208, 70, 1)
+        Height: =557
+        Visible: =rejectpopup
+        Width: =1063
+        X: =303
+        Y: =123
+        ZIndex: =13
+
+        Label37_5 As label:
+            FontWeight: =FontWeight.Bold
+            Height: =77
+            Size: =20
+            Text: ="Confirm Submission"
+            Width: =412
+            X: =4
+            Y: =18
+            ZIndex: =1
+
+        Label38_5 As label:
+            Height: =80
+            Size: =20
+            Text: ="Are you sure you want to reject the initiatives of '"&Gallery_study_3.Selected.Study&"'?"
+            Width: =869
+            X: =44
+            Y: =95
+            ZIndex: =2
+
+        Button5_11 As button:
+            DisplayMode: =If(TextInput3_5.Text="",DisplayMode.Disabled,DisplayMode.Edit)
+            Height: =57
+            OnSelect: |
+                =Clear(ValueofId);
+                ForAll(
+                    Filter(
+                        Gallery_study_10.AllItems,
+                        Checkbox2_9.Value = true
+                    ),
+                    Collect(
+                        ValueofId,
+                        ThisRecord.ID
+                    )
+                );
+                ResponceFlow.Run(
+                    "approver2",
+                    "Rejected",
+                    TextInput1_10.Text,
+                    JSON(ValueofId)
+                );
+                UpdateContext({Sendforapproval: false});
+                Notify(
+                    "The study is send for Approval Process successfully",
+                    NotificationType.Success
+                );
+            Text: ="Confirm"
+            Width: =210
+            X: =832
+            Y: =462
+            ZIndex: =4
+
+        Button5_10 As button:
+            Fill: =RGBA(255, 191, 0, 1)
+            Height: =57
+            OnSelect: |-
+                =UpdateContext({rejectpopup:false})
+            Text: ="Cancel"
+            Width: =210
+            X: =519
+            Y: =462
+            ZIndex: =5
+
+        TextInput3_5 As text:
+            Default: =""
+            Height: =235
+            HintText: ="Add Comments "
+            Size: =18
+            Width: =725
+            X: =56
+            Y: =175
+            ZIndex: =6
 
