--- a/SHS-014-V/Src/For Approval%28Approver1%29.fx.yaml
+++ b/SHS-014-V/Src/For Approval%28Approver1%29.fx.yaml
@@ -1940,7 +1940,7 @@
             Fill: =RGBA(255, 255, 255, 1)
             Height: =389
             Visible: =Sendforapproval
-            Width: =Parent.Width-500
+            Width: =796
             X: =222
             Y: =99
             ZIndex: =1
