--- a/SHS-014-V/Src/For Approval%28Approver2%29.fx.yaml
+++ b/SHS-014-V/Src/For Approval%28Approver2%29.fx.yaml
@@ -1941,7 +1941,7 @@
             Fill: =RGBA(255, 255, 255, 1)
             Height: =389
             Visible: =Sendforapproval
-            Width: =Parent.Width-500
+            Width: =778
             X: =222
             Y: =99
             ZIndex: =1
