--- a/SHS-014-V/Src/For Approval 3.fx.yaml
+++ b/SHS-014-V/Src/For Approval 3.fx.yaml
@@ -1993,7 +1993,7 @@
                     );
                     UpdateContext({Sendforapproval: false});
                     Notify(
-                        "The initiative is approved P successfully",
+                        "The initiative is approved  successfully",
                         NotificationType.Success
                     );
                 Text: ="Confirm"
