--- a/SHS-014-V/Src/For Approval 4.fx.yaml
+++ b/SHS-014-V/Src/For Approval 4.fx.yaml
@@ -1941,7 +1941,7 @@
             Fill: =RGBA(255, 255, 255, 1)
             Height: =389
             Visible: =Sendforapproval
-            Width: =Parent.Width-500
+            Width: =756
             X: =222
             Y: =99
             ZIndex: =1
@@ -1993,7 +1993,7 @@
                     );
                     UpdateContext({Sendforapproval: false});
                     Notify(
-                        "The study is send for Approval Process successfully",
+                        "The initiative is approved successfully",
                         NotificationType.Success
                     );
                 Text: ="Confirm"
