--- a/SHS-014-V/Src/For Champion Action%28C%29.fx.yaml
+++ b/SHS-014-V/Src/For Champion Action%28C%29.fx.yaml
@@ -365,8 +365,8 @@
                 DelayItemLoading: =true
                 Items: |-
                     =Filter(
-                        'Divisions With Study','Perf Year'=VarCurrentYear.Value,Title="Champion",
-                        Title = "Created",
+                        'Divisions With Study','Perf Year'=VarCurrentYear.Value,
+                        Title = "Created"||Title="Champion",
                         StartsWith(
                             'Study Name',
                             search_study.Text
