--- a/SHS-014-V/Src/For Champion Action%28C%29.fx.yaml
+++ b/SHS-014-V/Src/For Champion Action%28C%29.fx.yaml
@@ -15,7 +15,9 @@
 
         Button7 As button:
             AlignInContainer: =AlignInContainer.End
-            Text: ="Button"
+            OnSelect: |-
+                =UpdateContext({Showrejectpage:true})
+            Text: ="Reject page"
             ZIndex: =1
 
         "'Button&heading_11' As groupContainer.verticalAutoLayoutContainer":
