--- a/SHS-014-V/Src/For Champion Action%28C%29.fx.yaml
+++ b/SHS-014-V/Src/For Champion Action%28C%29.fx.yaml
@@ -18,6 +18,7 @@
             OnSelect: |-
                 =UpdateContext({Showrejectpage:true})
             Text: ="See all Rejected initiatives"
+            Width: =200
             ZIndex: =1
 
         "'Button&heading_11' As groupContainer.verticalAutoLayoutContainer":
