--- a/SHS-014-V/Src/For Champion Action%28C%29.fx.yaml
+++ b/SHS-014-V/Src/For Champion Action%28C%29.fx.yaml
@@ -366,7 +366,7 @@
                 Items: |-
                     =Filter(
                         'Divisions With Study',
-                        Title = "Created",
+                        Title = "Created",'Perf Year'=VarCurrentYear.Value,
                         StartsWith(
                             'Study Name',
                             search_study.Text
